--- a/vacancy.html
+++ b/vacancy.html
@@ -11,7 +11,7 @@
 	<body>
 		<header class="header">
 			<div class="header__content">
-				<button class="header__menu" aria-label="Переключаетель меню">
+				<button class="header__menu" aria-label="Переключаетель меню" type="button">
 					<svg class="header__burger-icon" width="60" height="23" aria-hidden="true">
 						<use href="images/sprite.svg#icon-burger"></use>
 					</svg>
@@ -201,7 +201,7 @@
 		</footer>
 
 		<div class="modal">
-			<button class="modal__close" aria-label="закрыть модальное окно">
+			<button class="modal__close" aria-label="закрыть модальное окно" type="button">
 				<svg class="modal__close-icon" width="20" height="20" aria-hidden="true">
 					<use href="images/sprite.svg#icon-close"></use>
 				</svg>
